--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -3,6 +3,10 @@ NOTES on the Version:
 
 // ---------------------------------------------------------------------
 
+   0.44 --- RECEIPT VERIFICATION. Goes with the below change. Client-side
+            receipts are now saved after every transaction, and verified
+            whenever the account/inbox/outbox files are re-downloaded.
+
    0.43 --- BALANCE AGREEMENT / NO ACCOUNT HISTORY has been added!
             Just make sure you grab the outbox and inbox, and the account
             file, before doing a transaction, since they are needed
