Added a few API funcs, and updated Windows build.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -3,6 +3,8 @@ NOTES on the Version:
 
 // ---------------------------------------------------------------------
 
+   0.45 --- Added a few API functions and updated the Windows build.
+
    0.44 --- RECEIPT VERIFICATION. Goes with the below change. Client-side
             receipts are now saved after every transaction, and whenever
             account/inbox/outbox files are downloaded, they're verified
